--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@ IStringExpander sx = new StringExpander(dict);
 Assert.AreEqual("Value of $(info) is 'Smock:180087763334'",
     sx.Expand("Value of $$(info) is '$(info)'"));
 </code></pre>
+
+<h2>
+<a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h2>
+
+<p><a href="https://www.nuget.org/packages/WrLib.Utils.StringExpander/">https://www.nuget.org/packages/WrLib.Utils.StringExpander/</a></p>
       </section>
     </div>
 
@@ -61,15 +66,6 @@ Assert.AreEqual("Value of $(info) is 'Smock:180087763334'",
     </div>
 
     
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-79191350-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
   </body>
 </html>
